--- a/feedback.yaml
+++ b/feedback.yaml
@@ -1,5 +1,5 @@
 ---
-Alberto:
+Irene:
   1:
     - No ha sido tu mejor día. Visita a tu médico.
     - Es necesario que visites al médico.
@@ -20,7 +20,7 @@ Alberto:
     - Hoy has estado fenomenal. Estás en plena forma. Sigue así.
     - Estás genial. Muy bien hecho.
   8:
-    - Hoy debes de estar orgulloso. Has estado como un deportista!
+    - Hoy debes de estar orgullosa. Has estado como una deportista!
     - Cada día estás mejor. Tienes una salud de hierro.
   9:
     - Increíble lo bien que te encuentras. Nuestros índices nos confirman que estás en PLENA FORMA! Sigue así.
