--- a/feedback.yaml
+++ b/feedback.yaml
@@ -12,7 +12,7 @@ Irene:
   4:
     - Estás consiguiendo los objetivos. Sigue así. ¿Has dado ya un paseo?
   5:
-    - Empiezas a tener una salud de hierro. Sigue así.
+    - Empiezas a estar en buena forma. Sigue así.
   6:
     - Hoy estás en muy buena forma. Sigue así.
     - Hoy has tenido buena actividad. Muy bien.
@@ -20,11 +20,11 @@ Irene:
     - Hoy has estado fenomenal. Estás en plena forma. Sigue así.
     - Estás genial. Muy bien hecho.
   8:
-    - Hoy debes de estar orgullosa. Has estado como una deportista!
+    - Hoy debes de estar orgullosa. Has estado como una deportista.
     - Cada día estás mejor. Tienes una salud de hierro.
   9:
-    - Increíble lo bien que te encuentras. Nuestros índices nos confirman que estás en PLENA FORMA! Sigue así.
-    - Hoy has estado como un deportista de élite. Eres un crack. Sigue así.
+    - Increíble lo bien que te encuentras. Nuestros índices nos confirman que estás en PLENA FORMA. Sigue así.
+    - Hoy has estado como una deportista de élite. Eres una crack. Sigue así.
   10:
     - Estás en mejor forma que Cristiano Ronaldo y Messi juntos. Sigue así.
     - Da gusto verte en este estado de forma. Tu salud está como un toro.
